--- a/who.html
+++ b/who.html
@@ -28,15 +28,19 @@
             <p>Hi there.</p>
             <br/>
             <p>I'm Stuart, a software engineer with a focus on creating things that people use.</p>
+            <br/>
+            <p>I'm a polygot programmer who never stands still and always strives to increase my knowledge and improve my skills.</p>
             </div>
     </div>
     <div class="box">
         <div class="inner_box">
             <h2>My Best Friends</h2>
             <ul>
-                <li>Python, Java</li>
-                <li>SQL, MongoDb</li>
+                <li>Python, Flask</li>
                 <li>C, embedded systems</li>
+                <li>Relational databases, MongoDB</li>
+                <li>Javascript, Node.js</li>
+                <li>Java, Android</li>
                 <li>Git, Command Line</li>
             </ul>
         </div>
